# wklm.github.io

./: .dockerignore  .gitignore  Dockerfile  README.md  bernoulli-bauhaus.css  brief.md  dune-project  index.html  index.tex  index_template.tex  test.html  test2.html
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.github/workflows/: _config.yml  deploy.yml  fetch_emails.yml  main.yml
posts/: hello.md  test-1.md  test-2.md  test-3.md  test-4.md  test.fdb_latexmk  test.fls  test.md  test.tex  test2.tex
posts-encrypted/: hello.md
scripts/: fetch_emails.py  new-post.sh  setup-hooks.sh  setup_fuji.sh  tailscale_smtp.py  test-roundtrip.sh
src/: Logic.v  blog_helpers.h  dune
tools/: decrypt_post.ml  dune  encrypt_post.ml  pgp_mime.ml
